tests/snapshots/use_lingui__should_process_macro_with_matching_name_in_correct_scopes.snap
---
source: tests/use_lingui.rs
---
import { useLingui } from '@lingui/react/macro';

function MyComponent() {
  const { t } = useLingui();
  const a = t`Text`;

  {
    // here is child scope with own "t" binding, shouldn't be processed
    const t = () => {};
    t`Text`;
  }
  {
    // here is child scope which should be processed, since 't' relates to outer scope
    t`Text`;
  }
}

↓ ↓ ↓ ↓ ↓ ↓

import { useLingui as $_useLingui } from "@lingui/react";
function MyComponent() {
    const { i18n: $__i18n, _: $__ } = $_useLingui();
    const a = $__i18n._(/*i18n*/ {
        id: "xeiujy",
        message: "Text"
    });
    {
        // here is child scope with own "t" binding, shouldn't be processed
        const t = ()=>{};
        t`Text`;
    }
    {
        // here is child scope which should be processed, since 't' relates to outer scope
        $__i18n._(/*i18n*/ {
            id: "xeiujy",
            message: "Text"
        });
    }
}
