tests/snapshots/use_lingui__support_renamed_destructuring.snap
---
source: tests/use_lingui.rs
---
import { useLingui } from '@lingui/react/macro';

function MyComponent() {
  const { t: _ } = useLingui();
  const a = _`Text`;
}

↓ ↓ ↓ ↓ ↓ ↓

import { useLingui as $_useLingui } from "@lingui/react";
function MyComponent() {
    const { i18n: $__i18n, _: $__ } = $_useLingui();
    const a = $__i18n._(/*i18n*/ {
        id: "xeiujy",
        message: "Text"
    });
}
