tests/snapshots/use_lingui__use_lingui_t_with_directive_applied_per_reference.snap
---
source: tests/use_lingui.rs
---
import { useLingui } from '@lingui/react/macro';

function App() {
  const { t } = useLingui();
  /* lingui-set context="first" */
  const msg1 = t`Hello`;
  /* lingui-set context="second" */
  const msg2 = t`World`;
  return msg1 + msg2;
}

↓ ↓ ↓ ↓ ↓ ↓

import { useLingui as $_useLingui } from "@lingui/react";
function App() {
    const { i18n: $__i18n, _: $__ } = $_useLingui();
    /* lingui-set context="first" */ const msg1 = $__i18n._(/*i18n*/ {
        id: "VUeJYD",
        message: "Hello",
        context: "first"
    });
    /* lingui-set context="second" */ const msg2 = $__i18n._(/*i18n*/ {
        id: "ovKD_8",
        message: "World",
        context: "second"
    });
    return msg1 + msg2;
}
