tests/snapshots/use_lingui__work_with_multiple_react_components.snap
---
source: tests/use_lingui.rs
---
import { useLingui } from '@lingui/react/macro';

function MyComponent() {
  const { t } = useLingui();
  const a = t`Text`;
}

function MyComponent2() {
  const { t } = useLingui();
  const b = t`Text`;
}

↓ ↓ ↓ ↓ ↓ ↓

import { useLingui as $_useLingui } from "@lingui/react";
function MyComponent() {
    const { i18n: $__i18n, _: $__ } = $_useLingui();
    const a = $__i18n._(/*i18n*/ {
        id: "xeiujy",
        message: "Text"
    });
}
function MyComponent2() {
    const { i18n: $__i18n, _: $__ } = $_useLingui();
    const b = $__i18n._(/*i18n*/ {
        id: "xeiujy",
        message: "Text"
    });
}
